# afmSocket

./: .gitignore  AfmSocketDefines.h  CMakeLists.txt  IAfmSocket.h  ISocketListener.h  LICENSE  README.md  afmSocketFactory.h  build.sh
common/: JSONUtil.h
internal/: afmClientSocket.h  afmServerSocket.h  afmSocket.h
schema/: socketoptions.schema.json
src/: afmClientSocket.cpp  afmServerSocket.cpp  afmSocket.cpp  afmSocketFactory.cpp
test/: main.cpp
